[gd_scene load_steps=3 format=3 uid="uid://c2w2oolvdi61v"]

[ext_resource type="Texture2D" uid="uid://dptnfjfyx4aa7" path="res://assets/sprites/dialogueBox.png" id="1_ah0qw"]
[ext_resource type="Script" uid="uid://dpgis5llxlcqc" path="res://scripts/dialogue_ui.gd" id="2_dialogue"]

[node name="AiDialogue" type="Control" groups=["dialogue_ui"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -132.0
offset_top = 34.0
offset_right = -132.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_dialogue")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 548.0
offset_bottom = 281.0
texture = ExtResource("1_ah0qw")

[node name="Name" type="RichTextLabel" parent="NinePatchRect"]
layout_mode = 0
offset_left = 25.0
offset_top = 28.0
offset_right = 209.0
offset_bottom = 60.0
text = "Rizzler"

[node name="DialogueText" type="RichTextLabel" parent="NinePatchRect"]
layout_mode = 0
offset_left = 37.0
offset_top = 59.0
offset_right = 458.0
offset_bottom = 162.0
theme_override_font_sizes/normal_font_size = 15
scroll_following = true

[node name="InputField" type="LineEdit" parent="NinePatchRect"]
layout_mode = 0
offset_left = 30.0
offset_top = 169.0
offset_right = 365.0
offset_bottom = 200.0
placeholder_text = "Type your answer..."

[node name="SendButton" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 382.0
offset_top = 168.0
offset_right = 470.0
offset_bottom = 199.0
text = "Send"

[node name="CloseButton" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 466.0
offset_top = -1.0
offset_right = 498.0
offset_bottom = 30.0
text = "x"
